Bug 46214 - mod_authz_host (trunk) writes noisy and strange error logs
Summary: mod_authz_host (trunk) writes noisy and strange error logs
Status: RESOLVED FIXED
Alias: None
Product: Apache httpd-2
Classification: Unclassified
Component: Other Modules (show other bugs)
Version: 2.5-HEAD
Hardware: All All
: P1 normal (vote)
Target Milestone: ---
Assignee: Apache HTTPD Bugs Mailing List
URL:
Keywords: ErrorMessage
Depends on:
Blocks:
 
Reported: 2008-11-14 09:43 UTC by Takashi Sato
Modified: 2011-08-07 14:07 UTC (History)
0 users



Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Takashi Sato 2008-11-14 09:43:31 UTC
mod_authz_host outputs error logs for each Require directives.
For example, if httpd.conf is:

<Location /server-info>
	SetHandler server-info
	Require ip 10.0.0.0/8
	Require ip 172.16.0.0/15
	Require ip 192.168.0.0/16
</Location>

when I access server-info from 127.0.0.1 error log says:

[Sat Nov 15 02:32:56 2008] [error] [client 127.0.0.1] access to /server-info failed, reason: ip address list does not meet 'require'ments for user '(null)' to be allowed access
[Sat Nov 15 02:32:56 2008] [error] [client 127.0.0.1] access to /server-info failed, reason: ip address list does not meet 'require'ments for user '(null)' to be allowed access
[Sat Nov 15 02:32:56 2008] [error] [client 127.0.0.1] access to /server-info failed, reason: ip address list does not meet 'require'ments for user '(null)' to be allowed access
[Sat Nov 15 02:32:56 2008] [error] [client 127.0.0.1] client denied by server configuration: /home/aptest/apache2-trunk/htdocs/server-info


Noisy...


Further more, even if finally access is granted, error log reads "access to /server-info failed".
Under that configuration when I access server-info from 192.168.0.1:

[Sat Nov 15 02:33:04 2008] [error] [client 192.168.0.1] access to /server-info failed, reason: ip address list does not meet 'require'ments for user '(null)' to be allowed access
[Sat Nov 15 02:33:04 2008] [error] [client 192.168.0.1] access to /server-info failed, reason: ip address list does not meet 'require'ments for user '(null)' to be allowed access


Strange!!!
Comment 1 Stefan Fritsch 2010-07-17 05:19:59 UTC
The loglevel for these messages has been changed from error to debug in r964156. But we should improve the wording, too.
Comment 2 Eric Covener 2011-08-07 14:07:59 UTC
Thanks Takashi -- i actually removed these messages entirely in r1154706 since they don't add anything to the smarter messages in mod_authz_core which is calling into mod_authz_host repeatedly.